added validations
